feat: support 1.20.2